# groupware-warp

./: .env.template  .gitignore  Cargo.toml
libs/arangors/: Cargo.toml
libs/arangors/src/connection/: mod.rs
libs/mobc-arangors/: Cargo.toml
libs/uclient/: Cargo.toml
libs/uclient/src/: error.rs  form.rs  lib.rs  reqwest.rs  surf.rs
src/: config.rs  database.rs  error_handler.rs  helpers.rs  main.rs  utils.rs
src/company/: controller.rs  controllers.rs  model.rs  models.rs  router.rs  routes.rs
src/user/: controller.rs  controllers.rs  mod.rs  model.rs  models.rs  router.rs  routes.rs
