[package]
name = "groupware-warp"
version = "0.1.0"
edition = "2018"
authors = ["bitfriend <bitfriend@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arangors = { version = "0.5", default-features = false }
bcrypt = "0.10"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
futures = "0.3"
mime = "0.3"
path-slash = "0.1"
r2d2 = "0.8"
r2d2_arangors = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_qs = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uclient = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
warp = "0.3"
