[package]
name = "groupware-warp"
version = "0.1.0"
edition = "2018"
authors = ["bitfriend <bitfriend@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = { path = "./libs/arangors", version = "0.4.8", default-features = false }
bcrypt = "0.10"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
mobc = "0.7"
mobc-arangors = { path = "./libs/mobc-arangors", version = "0.2.2", default-features = false, features = ["reqwest"] }
mime = "0.3"
path-slash = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_qs = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
warp = "0.3"
