[package]
name = "groupware-warp"
version = "0.1.0"
edition = "2018"
authors = ["bitfriend <bitfriend@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.10"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
lazy_static = "1.4.0"
mime = "0.3"
neo4rs = { path = "lib/neo4rs/lib", version = "0.5.9" }
path-slash = "0.1"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_qs = "0.8"
thiserror = "1.0"
tokio = { version = "1.0.1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
warp = "0.3"

[dev-dependencies]
fake = { version = "2.2.3", features = ["derive"] }

[workspace]
members = ["lib/neo4rs/lib"]
