[package]
name = "uclient"
version = "0.2.3"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Universal HTTP client for Rust"
repository = "https://github.com/fMeow/uclient"
documentation = "https://docs.rs/uclient"
keywords = [ "HTTP", "client", "universal", "web" ]
exclude = [ ".gitignore", ".github", "tests/**/*" ]

[package.metadata.docs.rs]
all-features = true
features = [ "multipart", "async_reqwest", "async_surf" ]

[features]
default = [ "multipart" ]
multipart = [
  "mime",
  "concat-reader",
  "mime_multipart",
  "hyper",
  "mime_guess"
]
blocking = [ "maybe-async/is_sync" ]
async_reqwest = [ "reqwest/default-tls", "futures", "bytes" ]
async_reqwest_rustls = [ "reqwest/rustls-tls", "futures", "bytes" ]
blocking_reqwest = [ "reqwest/blocking", "reqwest/default-tls", "blocking" ]
blocking_reqwest_rustls = [ "reqwest/blocking", "reqwest/rustls-tls", "blocking" ]
async_surf = [ "surf/default", "futures" ]
async_surf_rustls = [ "surf/h1-client-rustls", "surf/encoding", "futures" ]

[dependencies]
http = "0.2"
maybe-async = "0.2"
async-trait = "0.1"
thiserror = "1"

  [dependencies.concat-reader]
  version = "0.1"
  optional = true

  [dependencies.mime_guess]
  version = "1"
  optional = true

  [dependencies.mime_multipart]
  version = "0.6"
  optional = true

  [dependencies.mime]
  version = "0.2"
  optional = true

  [dependencies.hyper]
  version = "0.10"
  default-features = false
  optional = true

  [dependencies.bytes]
  version = "1"
  optional = true

  [dependencies.reqwest]
  version = "0.11"
  default-features = false
  features = [ "gzip", "stream" ]
  optional = true

  [dependencies.surf]
  version = "2.1.0"
  optional = true
  default-features = false

  [dependencies.futures]
  version = "0.3"
  optional = true

[dev-dependencies]
env_logger = "0.8"
pretty_assertions = "0.7"
serde_json = "1"
tempdir = "0.3"

  [dev-dependencies.tokio]
  version = "1.1"
  features = [ "macros", "rt-multi-thread" ]

  [dev-dependencies.async-std]
  version = "1"
  features = [ "attributes" ]
